Enhance build tasks